--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -8,6 +8,7 @@
 		"dev": "nodemon index.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
+	"proxy": "http://localhost:3001",
 	"author": "nina1012",
 	"license": "MIT",
 	"dependencies": {
